--- a/productspage/style.css
+++ b/productspage/style.css
@@ -64,7 +64,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 20px 20px;
     background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     z-index: 999;
@@ -122,7 +122,7 @@ footer{
     justify-content: space-between;
     background-color: #ffffff;
     padding:20px,20px;
-    margin:20px;
+    margin:20px 20px;
 }
 
 footer .column {
