--- a/productspage/pagescode/tvcode/tvstyle.css
+++ b/productspage/pagescode/tvcode/tvstyle.css
@@ -179,4 +179,66 @@ footer .followus .icon i{
     margin-top:0;
     font-size:30px;
 }
+body{
+    background-image: url(../../categoryimages/background.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.tvsection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 items per row */
+    gap: 15px; 
+    justify-items: center;
+    align-items: start;
+}
 
+.tvcards {
+
+background-color:white;
+width:270px;;
+height:290px;
+margin:15px;
+border-radius: 35px;
+text-align: center;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+transition: transform 0.5s ease-in-out;
+
+
+}
+
+
+ .tvimages{
+    width:100%;
+    height:250px;
+    margin-bottom:10px;
+    background-size: cover;
+    background-position: center; 
+    border-radius: 30px 30px 0 0; 
+    overflow: hidden; 
+ }
+
+.hd40 {
+    background-image: url(TVs/40inch/HD-40-Black.webp);
+}
+.i4k40 {
+    background-image: url(TVs/40inch/4K-40-Black.webp);
+}
+.hd60 {
+    background-image: url(TVs/60inch/HD-60-Black.webp);
+}
+.i4k60 {
+    background-image: url(TVs/60inch/4k-60-Black.webp);
+}
+.ihd80 {
+    background-image: url(TVs/80inch/HD-80-Black.webp);
+}
+.i4k80 {
+    background-image: url(TVs/80inch/4k-80-Black.webp);
+}
+
+.tvcards:hover {
+    cursor:pointer;
+    transform:scale(1.05);
+}
