--- a/productspage/style.css
+++ b/productspage/style.css
@@ -207,8 +207,8 @@ transition: transform 0.5s ease-in-out;
     height: 210px;
     margin-bottom:10px;
     background-size: cover;
-    background-position: center; /* Centers the background image */
-    border-radius: 30px 30px 0 0; /* Fixed syntax: no commas, only spaces */
+    background-position: center; 
+    border-radius: 30px 30px 0 0; 
     overflow: hidden; 
  }
 
@@ -228,6 +228,10 @@ transition: transform 0.5s ease-in-out;
     background-image: url(categoryimages/Consolescategory.webp);
 }
 
+.categorycards:hover {
+    cursor:pointer;
+    transform:scale(1.05);
+}
 body{
     background-image: url(categoryimages/background.jpeg);
     background-repeat: no-repeat;
@@ -235,11 +239,6 @@ body{
     background-attachment: fixed;
     background-size: cover;
 }
-.categorycards:hover {
-    cursor:pointer;
-    transform:scale(1.05);
-}
-
 
 
 
