--- a/productspage/pagescode/monitorscode/monitorstyle.css
+++ b/productspage/pagescode/monitorscode/monitorstyle.css
@@ -179,4 +179,62 @@ footer .followus .icon i{
     margin-top:0;
     font-size:30px;
 }
+body{
+    background-image: url(../../categoryimages/background.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.monitorimages {
+
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
+.monitorcards {
+
+background-color:white;
+width:250px;;
+height:260px;
+margin:15px;
+border-radius: 35px;
+text-align: center;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+transition: transform 0.5s ease-in-out;
+
+
+}
+
+
+ .mimages{
+    width:250px;
+    height: 220px;
+    margin-bottom:10px;
+    background-size: cover;
+    background-position: center; 
+    border-radius: 30px 30px 0 0; 
+    overflow: hidden; 
+ }
+
+.i2k25 {
+    background-image: url(Monitors/25inch/2k-25-Black.webp);
+}
+.i4k25 {
+    background-image: url(Monitors/25inch/4k-25-black.webp);
+}
+.i2k30 {
+    background-image: url(Monitors/30inch/2k-30-Black.webp);
+}
+.i4k30 {
+    background-image: url(Monitors/30inch/4k-30-Black.webp);
+}
+
+
+.monitorcards:hover {
+    cursor:pointer;
+    transform:scale(1.05);
+}
 
