--- a/productspage/pagescode/laptopscode/laptopstyle.css
+++ b/productspage/pagescode/laptopscode/laptopstyle.css
@@ -179,4 +179,73 @@ footer .followus .icon i{
     margin-top:0;
     font-size:30px;
 }
+body{
+    background-image: url(../../categoryimages/background.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.laptopsection {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 3 items per row */
+    gap: 15px; 
+    justify-items: center;
+    align-items: start;
+}
+
+.laptopcards {
+
+background-color:white;
+width:270px;;
+height:290px;
+margin:15px;
+border-radius: 35px;
+text-align: center;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+transition: transform 0.5s ease-in-out;
+
+
+}
+
+
+ .laptopimages{
+    width:100%;
+    height:250px;
+    margin-bottom:10px;
+    background-size: cover;
+    background-position: center; 
+    border-radius: 30px 30px 0 0; 
+    overflow: hidden; 
+ }
+
+.i12w {
+    background-image: url(Laptops/12inch/Windows-12-Black.webp);
+}
+.i12c {
+    background-image: url(Laptops/12inch/Chromebook-12-Black.webp);
+}
+.i12a {
+    background-image: url(Laptops/12inch/Airbook-12-Black.webp);
+}
+.i12p {
+    background-image: url(Laptops/12inch/Probook-12-black.webp);
+}
+.i16w {
+    background-image: url(Laptops/16inch/Windows-16-Black.webp);
+}
+.i16c {
+    background-image: url(Laptops/16inch/Chromebook-16-Black.webp);
+}
+.i16a {
+    background-image: url(Laptops/16inch/Airbook-16-black.webp);
+}
+.i16p {
+    background-image: url(Laptops/16inch/Probook-16-black.webp);
+}
+
+.laptopcards:hover {
+    cursor:pointer;
+    transform:scale(1.05);
+}
 
