--- a/productspage/pagescode/tvcode/tvstyle.css
+++ b/productspage/pagescode/tvcode/tvstyle.css
@@ -242,3 +242,20 @@ transition: transform 0.5s ease-in-out;
     cursor:pointer;
     transform:scale(1.05);
 }
+
+#details .mainimage{
+    width:30%;
+    margin-right: 50px;
+    margin-bottom: 20px;
+}
+.secimages {
+    width:27%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.secimagescols {
+    width: auto; 
+    display: flex;
+    justify-content: center; 
+}
