--- a/productspage/pagescode/tvcode/tvstyle.css
+++ b/productspage/pagescode/tvcode/tvstyle.css
@@ -272,13 +272,14 @@ transition: transform 0.5s ease-in-out;
    
 }
 
-
 .secimagescols{
-    flex-basis: 24%;
-    transition: transform 0.5s ease-in-out;
+    flex-basis: 30%;
+    opacity:0.5;
+    transition: opacity 0.3s ease, transform 0.5s ease-in-out;
 }
 
 .secimagescols:hover{
     cursor:pointer;
     transform:scale(1.05);
+    opacity:1;
 }
