--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -1,188 +1,258 @@
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Spartan', sans-serif;
-}
-
-h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
-}
-
-h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-}
-
-h3 {
+    outline: none;
+    font-family: 'Merriweather', serif;
+ }
+ /* top navbar */
+ .top-navbar{
+    display: flex;
+    justify-content: space-between;
+ }
+ .top-navbar p{
+    margin-top: 13px;
+    margin-left: 15px;
+ }
+ .top-navbar .icons{
+    margin-top: 13px;
+    margin-right: 15px;
+ }
+ .top-navbar a{
+    text-decoration: none;
+    color: black;
+    margin-left: 10px;
+ }
+ .top-navbar a img{
+    margin-bottom: 3px;
+ }
+ .top-navbar a:hover{
+    color: black;
+ }
+ @media screen and (max-width:400px){
+    .top-navbar a{
+        font-size: 13px;
+    }
+    .top-navbar a img{
+        width: 15px;
+    }
+    .top-navbar p{
+        font-size: 13px;
+    }
+ }
+ @media screen and (max-width:320px){
+    .top-navbar a{
+        font-size: 10px;
+    }
+    .top-navbar a img{
+        width: 13px;
+    }
+    .top-navbar p{
+        font-size: 10px;
+    }
+ }
+ @media screen and (max-width:318px){
+    .top-navbar a{
+        font-size: 8px;
+        margin-left: 0;
+    }
+    .top-navbar a img{
+        width: 10px;
+        margin-left: 0;
+    }
+    .top-navbar p{
+        font-size: 10px;
+        margin-top: 20px;
+    }
+ }
+ /* top navbar */
+ 
+ /* navbar */
+ #navbar{
+    background-color: #e5e7e9
+ }
+ #logo{
+    margin-left: 15px;
+    color: #212f3d;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 6px;
+ }
+ #logo span{
+    color: #212f3d;
+ }
+ #logo #span1{
     font-size: 30px;
-    line-height: 36px;
-    color: #222;
-}
+ }
+ .navbar-nav{
+    margin-left: 20px;
+ }
+ .nav-item{
+    margin-left: 10px;
+ }
+ .nav-item .nav-link{
+    color: #212f3d;
+    margin-left: 2px;
+    text-shadow: 0px 0px 1px black;
+    transition: 0.5s ease;
+ }
+ .nav-item .nav-link:hover{
+    color: #212f3d;
+ }
+ .dropdown-menu li a{
+    color: white;
+    transition: 0.5s ease;
+ }
+ .dropdown-menu li a:hover{
+    background-color: #e5e7e9;
+    color: #e5e7e9;
+ }
+ #search input{
+    border-radius: 50px;
+    border: none;
+ }
+ #search button{
+    border-radius: 50px;
+    color: white;
+    border: 1px solid #212f3d;
+    background-color: #212f3d;
+ }
+ /* navbar */
 
-h4 {
-    font-size: 20px;
-    color: #222;
-}
 
-h5 {
-    font-size: 16px;
-    color: #222;
-}
-
-h6 {
+ /* footer */
+#footer{
+    padding: 0 0 30px 0px;
+    color: white;
+    font-size: 14px;
+    background-color: #212f3d;
+    margin-top: 100px;
+ }
+ #footer .footer-top{
+    padding: 60px 0 30px 0;
+    background-color: #212f3d;
+    color: white;
+ }
+ #footer .footer-top .footer-contact{
+    margin-bottom: 30px;
+ }
+ #footer .footer-top .footer-contact h3{
+    color: #ffc800;
+ }
+ #footer .footer-top .footer-contact h4{
+    font-size: 22px;
+    margin: 0 0 30px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
     font-weight: 700;
-    font-size: 12px;
-}
-
-p {
+ }
+ #footer .footer-top .footer-contact p{
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    color: white;
+ }
+ #footer .footer-top h4{
     font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
-}
-
-.section-p1 {
-    padding: 40px 80px;
-}
-
-.section-m1 {
-    margin: 40px 0;
-}
-
-body {
-    width: 100%;
-}
-
-#header {
+    font-weight: bold;
+    position: relative;
+    padding-bottom: 12px;
+ }
+ #footer .footer-top .footer-links{
+    margin-bottom: 30px;
+    margin-top: 10px;
+ }
+ #footer .footer-top .footer-links h4{
+    color: #ffc800;
+ }
+ #footer .footer-top .footer-links ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+ }
+ #footer .footer-top .footer-links ul li{
+    padding: 10px 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px 20px;
-    background-color: #f0f8ff;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    z-index: 999;
-    position: sticky;
-    top:0;
-    left:0;
-}
-#Navbar{
-display: flex;
-align-items: center;
-justify-content: center;
-
-
-
-}
-
-#Navbar li{
-    list-style: none;
-    padding: 0 15px;
-}
-
-#Navbar li a{
-text-decoration: none;
-font-size: 13;
-font-weight:600;
-color:#465b52;
-transition: 0.4s ease;
-
-}
-#Navbar li a:hover{
-    color:black;
-    
-    
-    
-}
-#Navbar li a.active{
-    color:black
-}
-#Navbar li a.active::after{
-    content: '';
-    height: 2px;
-    width: 100%;
-    background: black;
-    display: block;
-    opacity:0;
-    transition:all 0.2s;
-}
-#Navbar li a:hover:after{
-    opacity:1;
-}
-footer{
-    display:flex;
-    flex:wrap;
-    justify-content: space-between;
-    background-color: #ffffff;
-    padding:20px,20px;
-    margin:20px;
-}
-
-footer .column {
-    
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top:10px;
-
-
-}
-footer .column a{
-    font-size: 14px;
+ }
+ #footer .footer-top .footer-links ul li a{
     text-decoration: none;
-    margin:0;
-    color:#222;
-    
-
-
-}
-
-
-footer .paymentphoto{
-display: flex;
-flex-direction: row;
-
-}
-footer .paymentmethods {
-    display: flex;
-    gap: 10px;
-    align-items: center; 
-}
-
-footer h4{
-    font-size: 16px;
-    padding-bottom: 20px;;
-
-
-}
-
-footer p{
-
-    font-size:14px;
-    margin:0 0 8px 0;
-}
-
-footer .followus {
-    margin-top: 20px;
-}
-
-footer .followus .icon{
-    margin: 0;
-    display:flex;
-    gap:15px;
-}
-footer .followus .icon i{
-    margin-top:0;
-    font-size:30px;
-}
-body{
-    background-image: url(../productspage/categoryimages/background.jpeg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-}
+    color: white;
+    display: inline-block;
+    line-height: 1;
+    font-weight: bold;
+    transition: 0.5s ease;
+ }
+ #footer .footer-top .footer-links ul li a:hover{
+    color: #ffc800;
+ }
+ #footer .footer-top .social-links a{
+    font-size: 18px;
+    display: inline-block;
+    text-decoration: none;
+    background-color: #373737;
+    color: white;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    transition: 0.5s ease;
+ }
+ #footer .footer-top .social-links a:hover{
+    background-color: #ffc800;
+    color: white;
+ }
+ #footer .copyright{
+    text-align: center;
+    float: left;
+ }
+ #footer .credits{
+    float: right;
+    text-align: center;
+    font-size: 13px;
+ }
+ #footer .credits a{
+    color: #ffc800;
+ }
+ /* footer */
+ 
+ 
+ 
+ 
+ html{
+    scroll-behavior: smooth;
+ }
+ .arrow{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 50px;
+    right: 50px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+ }
+ 
+ 
+ 
+/* about */
+#about{
+    margin-top: 30px;
+ }
+ #about h3{
+    font-weight: bold;
+    color: #ffc800;
+    text-shadow: 0px 1px 1px black;
+ }
+ #about button{
+    width: 150px;
+    height: 36px;
+    color: white;
+    background-color: rgb(67 0 86);
+    border-radius: 5px;
+    cursor: pointer;
+ }
+ /* about */ 
+ 
