added change colour/item functionality

--- a/productspage/pagescode/tvcode/tvstyle.css
+++ b/productspage/pagescode/tvcode/tvstyle.css
@@ -258,7 +258,7 @@ transition: transform 0.5s ease-in-out;
 .mainimage img{
     width:100%;
     border-radius: 30px;
-    border: 5px solid antiquewhite;
+    border: 5px solid white;
     cursor: pointer;
     margin-right: 40px;
 
@@ -302,7 +302,7 @@ width:50%;
             padding: 8px 12px;
             font-size: 16px;
             color: #333;
-            background-color:antiquewhite;
+            background-color:white;
             border: 1px solid #ccc;
             border-radius: 5px;
             cursor: pointer;
@@ -312,7 +312,7 @@ width:50%;
             padding: 8px 12px;
             font-size: 16px;
             color: #333;
-            background-color:antiquewhite;
+            background-color:white;
             border: 1px solid #ccc;
             border-radius: 5px;
             width:60px
@@ -328,7 +328,7 @@ width:50%;
             padding: 8px 12px;
             font-size: 16px;
             color: #333;
-            background-color:antiquewhite;
+            background-color:white;
             border: 1px solid #ccc;
             border-radius: 5px;
             transition: opacity 0.3s ease, transform 0.5s ease-in-out;
@@ -337,7 +337,7 @@ width:50%;
             cursor:pointer;
             transform:scale(1.01);
             opacity:1;
-            background-color:antiquewhite;
+            background-color:white;
         }
 
         
