--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -1,304 +1,127 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    font-family: 'Merriweather', serif;
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   outline: none;
+   font-family: "Merriweather", serif;
  }
  /* top navbar */
- .top-navbar{
-    display: flex;
-    justify-content: space-between;
+ .top-navbar {
+   display: flex;
+   justify-content: space-between;
  }
- .top-navbar p{
-    margin-top: 13px;
-    margin-left: 15px;
+ .top-navbar p {
+   margin-top: 13px;
+   margin-left: 15px;
  }
- .top-navbar .icons{
-    margin-top: 13px;
-    margin-right: 15px;
+ .top-navbar .icons {
+   margin-top: 13px;
+   margin-right: 15px;
  }
- .top-navbar a{
-    text-decoration: none;
-    color: black;
-    margin-left: 10px;
+ .top-navbar a {
+   text-decoration: none;
+   color: black;
+   margin-left: 10px;
  }
- .top-navbar a img{
-    margin-bottom: 3px;
+ .top-navbar a img {
+   margin-bottom: 3px;
  }
- .top-navbar a:hover{
-    color: black;
+ .top-navbar a:hover {
+   color: black;
  }
- @media screen and (max-width:400px){
-    .top-navbar a{
-        font-size: 13px;
-    }
-    .top-navbar a img{
-        width: 15px;
-    }
-    .top-navbar p{
-        font-size: 13px;
-    }
+ @media screen and (max-width: 400px) {
+   .top-navbar a {
+     font-size: 13px;
+   }
+   .top-navbar a img {
+     width: 15px;
+   }
+   .top-navbar p {
+     font-size: 13px;
+   }
  }
- @media screen and (max-width:320px){
-    .top-navbar a{
-        font-size: 10px;
-    }
-    .top-navbar a img{
-        width: 13px;
-    }
-    .top-navbar p{
-        font-size: 10px;
-    }
+ @media screen and (max-width: 320px) {
+   .top-navbar a {
+     font-size: 10px;
+   }
+   .top-navbar a img {
+     width: 13px;
+   }
+   .top-navbar p {
+     font-size: 10px;
+   }
  }
- @media screen and (max-width:318px){
-    .top-navbar a{
-        font-size: 8px;
-        margin-left: 0;
-    }
-    .top-navbar a img{
-        width: 10px;
-        margin-left: 0;
-    }
-    .top-navbar p{
-        font-size: 10px;
-        margin-top: 20px;
-    }
+ @media screen and (max-width: 318px) {
+   .top-navbar a {
+     font-size: 8px;
+     margin-left: 0;
+   }
+   .top-navbar a img {
+     width: 10px;
+     margin-left: 0;
+   }
+   .top-navbar p {
+     font-size: 10px;
+     margin-top: 20px;
+   }
  }
  /* top navbar */
  
  /* navbar */
- #navbar{
-    background-color: #e5e7e9;
+ #navbar {
+   background-color: #e5e7e9;
  }
-
- #logo{
-    margin-left: 15px;
-    color: #212f3d;
-    font-size: 25px;
-    font-weight: bold;
-    margin-bottom: 6px;
+ #logo {
+   margin-left: 15px;
+   color: #212f3d;
+   font-size: 25px;
+   font-weight: bold;
+   margin-bottom: 6px;
  }
- #logo span{
-    color: #212f3d;
+ #logo span {
+   color: #212f3d;
  }
- #logo #span1{
-    font-size: 30px;
+ #logo #span1 {
+   font-size: 30px;
  }
- .navbar-nav{
-    margin-left: 20px;
+ .logo-img {
+   height: 50px;
+   margin-right: 10px;
  }
- .nav-item{
-    margin-left: 10px;
+ .navbar-nav {
+   margin-left: 20px;
  }
- .nav-item .nav-link{
-    color: #212f3d;
-    margin-left: 2px;
-    text-shadow: 0px 0px 1px black;
-    transition: 0.5s ease;
+ .nav-item {
+   margin-left: 10px;
  }
- .nav-item .nav-link:hover{
-    color: #212f3d;
+ .nav-item .nav-link {
+   color: #212f3d;
+   margin-left: 2px;
+   text-shadow: 0px 0px 1px black;
+   transition: 0.5s ease;
  }
- .dropdown-menu li a{
-    color: white;
-    transition: 0.5s ease;
+ .nav-item .nav-link:hover {
+   color: #212f3d;
  }
- .dropdown-menu li a:hover{
-    background-color: #e5e7e9;
-    color: #e5e7e9;
+ .dropdown-menu li a {
+   color: white;
+   transition: 0.5s ease;
  }
- #search input{
-    border-radius: 50px;
-    border: none;
+ .dropdown-menu li a:hover {
+   background-color: #e5e7e9;
+   color: #e5e7e9;
  }
- #search button{
-    border-radius: 50px;
-    color: white;
-    border: 1px solid #212f3d;
-    background-color: #212f3d;
+ #search input {
+   border-radius: 50px;
+   border: none;
+ }
+ #search button {
+   border-radius: 50px;
+   color: white;
+   border: 1px solid #212f3d;
+   background-color: #212f3d;
  }
  /* navbar */
-
-
- /* footer */
-#footer{
-    padding: 0 0 30px 0px;
-    color: white;
-    font-size: 14px;
-    background-color: #212f3d;
-    margin-top: 100px;
- }
- #footer .footer-top{
-    padding: 60px 0 30px 0;
-    background-color: #212f3d;
-    color: white;
- }
- #footer .footer-top .footer-contact{
-    margin-bottom: 30px;
- }
- #footer .footer-top .footer-contact h3{
-    color: #ffc800;
- }
- #footer .footer-top .footer-contact h4{
-    font-size: 22px;
-    margin: 0 0 30px 0;
-    padding: 2px 0 2px 0;
-    line-height: 1;
-    font-weight: 700;
- }
- #footer .footer-top .footer-contact p{
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 0;
-    color: white;
- }
- #footer .footer-top h4{
-    font-size: 16px;
-    font-weight: bold;
-    position: relative;
-    padding-bottom: 12px;
- }
- #footer .footer-top .footer-links{
-    margin-bottom: 30px;
-    margin-top: 10px;
- }
- #footer .footer-top .footer-links h4{
-    color: #ffc800;
- }
- #footer .footer-top .footer-links ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
- }
- #footer .footer-top .footer-links ul li{
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
- }
- #footer .footer-top .footer-links ul li a{
-    text-decoration: none;
-    color: white;
-    display: inline-block;
-    line-height: 1;
-    font-weight: bold;
-    transition: 0.5s ease;
- }
- #footer .footer-top .footer-links ul li a:hover{
-    color: #ffc800;
- }
- #footer .footer-top .social-links a{
-    font-size: 18px;
-    display: inline-block;
-    text-decoration: none;
-    background-color: #373737;
-    color: white;
-    line-height: 1;
-    padding: 8px 0;
-    margin-right: 4px;
-    border-radius: 50%;
-    text-align: center;
-    width: 36px;
-    transition: 0.5s ease;
- }
- #footer .footer-top .social-links a:hover{
-    background-color: #ffc800;
-    color: white;
- }
- #footer .copyright{
-    text-align: center;
-    float: left;
- }
- #footer .credits{
-    float: right;
-    text-align: center;
-    font-size: 13px;
-  }
-  .top-navbar a img {
-    width: 15px;
-  }
-  .top-navbar p {
-    font-size: 13px;
-  }
-
-@media screen and (max-width: 320px) {
-  .top-navbar a {
-    font-size: 10px;
-  }
-  .top-navbar a img {
-    width: 13px;
-  }
-  .top-navbar p {
-    font-size: 10px;
-  }
-}
-@media screen and (max-width: 318px) {
-  .top-navbar a {
-    font-size: 8px;
-    margin-left: 0;
-  }
-  .top-navbar a img {
-    width: 10px;
-    margin-left: 0;
-  }
-  .top-navbar p {
-    font-size: 10px;
-    margin-top: 20px;
-  }
-}
-/* top navbar */
-
-/* navbar */
-#navbar {
-  background-color: #e5e7e9;
-}
-#logo {
-  margin-left: 15px;
-  color: #212f3d;
-  font-size: 25px;
-  font-weight: bold;
-  margin-bottom: 6px;
-}
-#logo span {
-  color: #212f3d;
-}
-#logo #span1 {
-  font-size: 30px;
-}
-.navbar-nav {
-  margin-left: 20px;
-}
-.nav-item {
-  margin-left: 10px;
-}
-.nav-item .nav-link {
-  color: #212f3d;
-  margin-left: 2px;
-  text-shadow: 0px 0px 1px black;
-  transition: 0.5s ease;
-}
-.nav-item .nav-link:hover {
-  color: #212f3d;
-}
-.dropdown-menu li a {
-  color: white;
-  transition: 0.5s ease;
-}
-.dropdown-menu li a:hover {
-  background-color: #e5e7e9;
-  color: #e5e7e9;
-}
-#search input {
-  border-radius: 50px;
-  border: none;
-}
-#search button {
-  border-radius: 50px;
-  color: white;
-  border: 1px solid #212f3d;
-  background-color: #212f3d;
-}
-/* navbar */
 
 /* footer */
 #footer {
