changed remove button look and added quantity

--- a/checkoutpage/style_cart.css
+++ b/checkoutpage/style_cart.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -13,7 +13,7 @@ img{
   height: 100px;
 }
 
-
+.wishlist-container,
 .cart-container {
     max-width: 1200px;
     margin: 20px auto;
@@ -22,20 +22,20 @@ img{
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
+.wishlist-layout,
 .cart-layout {
     display: flex;
     justify-content: space-between;
     gap: 20px;
 }
-
+.wishlist-items,
 .cart-items {
     flex: 2;
     background: #f7f7f7;
     padding: 15px;
     border-radius: 8px;
 }
-
+.wishlist-item,
 .cart-item {
     display: flex;
     align-items: center;
@@ -46,16 +46,15 @@ img{
 .cart-item:last-child {
     border-bottom: none;
 }
-
+.wishlist-item img,
 .cart-item img {
-    width: 120px;
+  width: 120px;
     height: auto;
     border-radius: 8px;
     margin-right: 15px;
 }
-
+.wishlist-details,
 .cart-details {
-    flex: 1;
 }
 
 .cart-details p {
@@ -64,16 +63,21 @@ img{
 
 .cart-details button {
     align-items: right;
-    background-color: #ff4d4d;
-    color: white;
+    background-color: #fff;
+    color: black;
     border: none;
-    padding: 10px 14px;
-    border-radius: 4px;
+    padding: 1px 3px;
+    font-size: 7px;
+    text-align: center;
+    border-radius: 50%;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
     cursor: pointer;
 }
 
 .cart-details button:hover {
-    background-color: #e60000;
+    background-color: #FF0000;
 }
 
 .checkout-summary {
@@ -137,127 +141,3 @@ img{
   border-width: 2px;
   border-radius: 5px;
 }
-
-#header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    z-index: 999;
-    position: sticky;
-    top:0;
-    left:0;
-}
-#Navbar{
-display: flex;
-align-items: center;
-justify-content: center;
-
-
-
-}
-
-#Navbar li{
-    list-style: none;
-    padding: 0 15px;
-}
-
-#Navbar li a{
-text-decoration: none;
-font-size: 13;
-font-weight:600;
-color:#465b52;
-transition: 0.4s ease;
-
-}
-#Navbar li a:hover{
-    color:black;
-    
-    
-    
-}
-#Navbar li a.active{
-    color:black
-}
-#Navbar li a.active::after{
-    content: '';
-    height: 2px;
-    width: 100%;
-    background: black;
-    display: block;
-    opacity:0;
-    transition:all 0.2s;
-}
-#Navbar li a:hover:after{
-    opacity:1;
-}
-
-footer{
-    display:flex;
-    flex:wrap;
-    justify-content: space-between;
-    background-color: #ffffff;
-    padding:20px,20px;
-    margin:20px;
-}
-
-footer .column {
-    
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top:10px;
-
-
-}
-footer .column a{
-    font-size: 14px;
-    text-decoration: none;
-    margin:0;
-    color:#222;
-    
-
-
-}
-
-
-footer .paymentphoto{
-display: flex;
-flex-direction: row;
-
-}
-footer .paymentmethods {
-    display: flex;
-    gap: 10px;
-    align-items: center; 
-}
-
-footer h4{
-    font-size: 16px;
-    padding-bottom: 20px;;
-
-
-}
-
-footer p{
-
-    font-size:14px;
-    margin:0 0 8px 0;
-}
-
-footer .followus {
-    margin-top: 20px;
-}
-
-footer .followus .icon{
-    margin: 0;
-    display:flex;
-    gap:15px;
-}
-footer .followus .icon i{
-    margin-top:0;
-    font-size:30px;
-}
-
