--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -273,3 +273,24 @@ html {
  }
  /* about */ 
 
+ /*about hero*/
+
+ #hero {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.hero-bg img {
+  width: 100%;
+  height: auto;
+  filter: brightness(50%);
+}
+.hero-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index:12;
+}
+
+/*about hero*/
