--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -1,127 +1,127 @@
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   outline: none;
-   font-family: "Merriweather", serif;
- }
- /* top navbar */
- .top-navbar {
-   display: flex;
-   justify-content: space-between;
- }
- .top-navbar p {
-   margin-top: 13px;
-   margin-left: 15px;
- }
- .top-navbar .icons {
-   margin-top: 13px;
-   margin-right: 15px;
- }
- .top-navbar a {
-   text-decoration: none;
-   color: black;
-   margin-left: 10px;
- }
- .top-navbar a img {
-   margin-bottom: 3px;
- }
- .top-navbar a:hover {
-   color: black;
- }
- @media screen and (max-width: 400px) {
-   .top-navbar a {
-     font-size: 13px;
-   }
-   .top-navbar a img {
-     width: 15px;
-   }
-   .top-navbar p {
-     font-size: 13px;
-   }
- }
- @media screen and (max-width: 320px) {
-   .top-navbar a {
-     font-size: 10px;
-   }
-   .top-navbar a img {
-     width: 13px;
-   }
-   .top-navbar p {
-     font-size: 10px;
-   }
- }
- @media screen and (max-width: 318px) {
-   .top-navbar a {
-     font-size: 8px;
-     margin-left: 0;
-   }
-   .top-navbar a img {
-     width: 10px;
-     margin-left: 0;
-   }
-   .top-navbar p {
-     font-size: 10px;
-     margin-top: 20px;
-   }
- }
- /* top navbar */
- 
- /* navbar */
- #navbar {
-   background-color: #e5e7e9;
- }
- #logo {
-   margin-left: 15px;
-   color: #212f3d;
-   font-size: 25px;
-   font-weight: bold;
-   margin-bottom: 6px;
- }
- #logo span {
-   color: #212f3d;
- }
- #logo #span1 {
-   font-size: 30px;
- }
- .logo-img {
-   height: 50px;
-   margin-right: 10px;
- }
- .navbar-nav {
-   margin-left: 20px;
- }
- .nav-item {
-   margin-left: 10px;
- }
- .nav-item .nav-link {
-   color: #212f3d;
-   margin-left: 2px;
-   text-shadow: 0px 0px 1px black;
-   transition: 0.5s ease;
- }
- .nav-item .nav-link:hover {
-   color: #212f3d;
- }
- .dropdown-menu li a {
-   color: white;
-   transition: 0.5s ease;
- }
- .dropdown-menu li a:hover {
-   background-color: #e5e7e9;
-   color: #e5e7e9;
- }
- #search input {
-   border-radius: 50px;
-   border: none;
- }
- #search button {
-   border-radius: 50px;
-   color: white;
-   border: 1px solid #212f3d;
-   background-color: #212f3d;
- }
- /* navbar */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: "Merriweather", serif;
+}
+/* top navbar */
+.top-navbar {
+  display: flex;
+  justify-content: space-between;
+}
+.top-navbar p {
+  margin-top: 13px;
+  margin-left: 15px;
+}
+.top-navbar .icons {
+  margin-top: 13px;
+  margin-right: 15px;
+}
+.top-navbar a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+}
+.top-navbar a img {
+  margin-bottom: 3px;
+}
+.top-navbar a:hover {
+  color: black;
+}
+@media screen and (max-width: 400px) {
+  .top-navbar a {
+    font-size: 13px;
+  }
+  .top-navbar a img {
+    width: 15px;
+  }
+  .top-navbar p {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .top-navbar a {
+    font-size: 10px;
+  }
+  .top-navbar a img {
+    width: 13px;
+  }
+  .top-navbar p {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 318px) {
+  .top-navbar a {
+    font-size: 8px;
+    margin-left: 0;
+  }
+  .top-navbar a img {
+    width: 10px;
+    margin-left: 0;
+  }
+  .top-navbar p {
+    font-size: 10px;
+    margin-top: 20px;
+  }
+}
+/* top navbar */
+
+/* navbar */
+#navbar {
+  background-color: #e5e7e9;
+}
+#logo {
+  margin-left: 15px;
+  color: #212f3d;
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+#logo span {
+  color: #212f3d;
+}
+#logo #span1 {
+  font-size: 30px;
+}
+.logo-img {
+  height: 50px;
+  margin-right: 10px;
+}
+.navbar-nav {
+  margin-left: 20px;
+}
+.nav-item {
+  margin-left: 10px;
+}
+.nav-item .nav-link {
+  color: #212f3d;
+  margin-left: 2px;
+  text-shadow: 0px 0px 1px black;
+  transition: 0.5s ease;
+}
+.nav-item .nav-link:hover {
+  color: #212f3d;
+}
+.dropdown-menu li a {
+  color: white;
+  transition: 0.5s ease;
+}
+.dropdown-menu li a:hover {
+  background-color: #e5e7e9;
+  color: #e5e7e9;
+}
+#search input {
+  border-radius: 50px;
+  border: none;
+}
+#search button {
+  border-radius: 50px;
+  color: white;
+  border: 1px solid #212f3d;
+  background-color: #212f3d;
+}
+/* navbar */
 
 /* footer */
 #footer {
@@ -189,7 +189,7 @@
 #footer .footer-top .footer-links ul li a:hover {
   color: #ffc800;
 }
-#footer .footer-top .social-links a {
+#footer .footer-top .socail-links a {
   font-size: 18px;
   display: inline-block;
   text-decoration: none;
@@ -203,7 +203,7 @@
   width: 36px;
   transition: 0.5s ease;
 }
-#footer .footer-top .social-links a:hover {
+#footer .footer-top .socail-links a:hover {
   background-color: #ffc800;
   color: white;
 }
@@ -262,20 +262,19 @@ html {
   color: #333;
 }
 
- 
- #about button{
-    width: 150px;
-    height: 36px;
-    color: white;
-    background-color: rgb(67 0 86);
-    border-radius: 5px;
-    cursor: pointer;
- }
- /* about */ 
+#about button {
+  width: 150px;
+  height: 36px;
+  color: white;
+  background-color: rgb(67 0 86);
+  border-radius: 5px;
+  cursor: pointer;
+}
+/* about */
 
- /*about hero*/
+/*about hero*/
 
- #hero {
+#hero {
   position: relative;
   text-align: center;
   color: white;
@@ -290,7 +289,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index:12;
+  z-index: 12;
 }
 
 /*about hero*/
